[gd_scene load_steps=9 format=2]

[ext_resource path="res://UI/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://Resources/default_theme.tres" type="Theme" id=2]
[ext_resource path="res://Assets/UI/white_bg.png" type="Texture" id=3]
[ext_resource path="res://Assets/Textures/pause_panel.png" type="Texture" id=4]
[ext_resource path="res://Resources/pixel_font.tres" type="DynamicFont" id=5]

[sub_resource type="ImageTexture" id=2]

[sub_resource type="ImageTexture" id=3]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 18, 18 )
margin_left = 12.0
margin_right = 12.0
margin_top = 12.0
margin_bottom = 12.0

[node name="PauseMenu" type="Control"]
pause_mode = 2
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 544.0, 408.0, 680.0 ],
"_edit_use_anchors_": false,
"_edit_vertical_guides_": [ 960.0 ]
}

[node name="bg" type="TextureRect" parent="."]
visible = false
modulate = Color( 0, 0, 0, 0.745098 )
margin_left = -32.0723
margin_top = -31.2791
margin_right = -24.0723
margin_bottom = -23.2791
rect_scale = Vector2( 247, 143 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WindowDialog" type="WindowDialog" parent="."]
visible = true
margin_left = 536.0
margin_top = 288.0
margin_right = 1384.0
margin_bottom = 808.0
custom_icons/close_highlight = SubResource( 2 )
custom_icons/close = SubResource( 3 )
custom_styles/panel = SubResource( 1 )
custom_fonts/title_font = ExtResource( 5 )
custom_constants/title_height = -107
window_title = "Pause"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeBtn" type="Button" parent="WindowDialog"]
margin_left = 272.0
margin_top = 136.0
margin_right = 576.0
margin_bottom = 189.0
theme = ExtResource( 2 )
text = "Resume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsBtn" type="Button" parent="WindowDialog"]
margin_left = 272.0
margin_top = 231.0
margin_right = 575.0
margin_bottom = 284.0
theme = ExtResource( 2 )
text = "Settings"

[node name="MainMenuBtn" type="Button" parent="WindowDialog"]
margin_left = 272.0
margin_top = 328.0
margin_right = 575.0
margin_bottom = 381.0
theme = ExtResource( 2 )
text = "Main Menu"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_down" from="WindowDialog/ResumeBtn" to="." method="_on_ResumeBtn_button_down"]
[connection signal="button_down" from="WindowDialog/SettingsBtn" to="." method="_on_SettingsBtn_button_down"]
[connection signal="button_down" from="WindowDialog/MainMenuBtn" to="." method="_on_MainMenuBtn_button_down"]
